checkitout/src/app/home/home.component.css
#pageTearImg {
    position: absolute;
    width: 100%;
    height: 475px;
    left: 0px;
    top: 60px;
    scale: -50;
    transform: rotate(-180deg);
}

#boxOne {
    position: static;
    width: 250px;
    height: 250px;
    left: 10%;
    top: 0px;

    background: black;
    border-radius: 10px;
    flex: none;
    order: 0;
    flex-grow: 0;
    margin: 0px 60px;
}

#boxTwo {
    position: static;
    width: 250px;
    height: 250px;
    left: 330px;
    top: 0px;

    background: black;
    border-radius: 10px;
    flex: none;
    order: 1;
    flex-grow: 0;
    margin: 0px 60px;
}

#boxThree {
    position: static;
    width: 250px;
    height: 250px;
    left: 660px;
    top: 0px;

    background: black;
    border-radius: 10px;
    flex: none;
    order: 2;
    flex-grow: 0;
    margin: 0px 60px;
}

#boxFour {
    position: static;
    width: 250px;
    height: 250px;
    left: 25%;
    top: 0px;

    background: black;
    border-radius: 10px;
    flex: none;
    order: 3;
    flex-grow: 0;
    margin: 0px 60px;
}

.middleBoxes {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 0px;

    position: absolute;
    width: 100%;
    height: 250px;
    left: 7.5%; 
    top: 506px;
}

.bottomBlackBox {
    position: absolute;
    width: 75%;
    height: 400px;
    left: 12.5%;
    top: 862px;
    margin-bottom: 10px;
    background: lightgray;
    border-radius: 10px;
}

.pickup {
    position: absolute;
    width: 199px;
    height: 42px;
    left: 46.5%;
    top: 788px;
    font-style: normal;
    font-weight: 500;
    font-size: 28px;
    line-height: 42px;
    color: black;
}

.quickCheckout {
    position: absolute;
    width: 224px;
    height: 42px;
    left: 46.5%;
    top: 439px;
    margin: -5px;
    font-style: normal;
    font-weight: 500;
    font-size: 28px;
    line-height: 42px;

    color:black;
}

.inventoryOneTitle {
    position: absolute;
    width: 175px;
    height: 30px;
    left: 20%;
    top:  194px;

    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    line-height: 30px;
    color: white;
}

.inventoryOneOut {
    position: absolute;
    width: 36px;
    height: 30px;
    left: 25%;
    top: 242px;

    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 30px;
    color: white;
}

.inventoryOneAvailable {
    position: absolute;
    width: 93px;
    height: 30px;
    left: 25%;
    top: 282px;

    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 30px;
    color: white;
}

.inventoryTwoTitle {
    position: absolute;
    width: 118px;
    height: 30px;
    left: 49%;
    top: 194px;

    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    line-height: 30px;
    color: white;
}

.inventoryTwoOut {
    position: absolute;
    width: 36px;
    height: 30px;
    left: 52%;
    top: 242px;

    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 30px;
    color: white;
}

.inventoryTwoAvailable {
    position: absolute;
    width: 93px;
    height: 30px;
    left: 52%;
    top: 282px;

    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 30px;
    color: white;
}

.inventoryThreeTitle {
    position: absolute;
    width: 126px;
    height: 30px;
    left: 75%;
    top: 194px;

    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    line-height: 30px;
    color: white;
}

.inventoryThreeOut {
    position: absolute;
    width: 36px;
    height: 30px;
    left: 79%;
    top: 242px;

    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 30px;
    color: white;
}

.inventoryThreeAvailable {
    position: absolute;
    width: 93px;
    height: 30px;
    left: 79%;
    top: 282px;

    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 30px;
    color: white;
}

.currentInventory {
    position: absolute;
    width: 318px;
    height: 54px;
    left: 44%;
    top: 128px;

    font-style: normal;
    font-weight: 500;
    font-size: 36px;
    line-height: 54px;
    color: #f1b82d;
}

body {
    position: relative;
}

